src/app/app.component.scss
@import '../sp-colors.scss';
@import '../design-system.scss';
.global-container {
	display: flex;
	flex-direction: column;
	background-color: #fbfeff;
	.router-outlet {
		height: 100%;
		transition: all 0.3s;
	}
}

.unanimated-dialog-container {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
}

.update-bar {
	width: 100%;
	padding: 10px;
	display: flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	z-index: 10;

	.circle {
		border-radius: 50%;
		width: 8px;
		height: 8px;
	}

	.title {
		font-weight: 500;
		font-size: 15px;
		margin-left: 10px;
	}
}

.trial-bar {
	width: 100%;

	.daysRect {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;

		background: #ffffff;
		mix-blend-mode: normal;
		opacity: 0.3;
		border-radius: 6px;
	}

	.daysContainer {
		display: inline-block;
		position: relative;
	}

	.trialing {
		display: flex;
		align-items: center;
		height: 50px;
		background: radial-gradient(98.09% 98.09% at 10.99% 0%, #15d593 0%, #00b467 100%);

		.daysLeft {
			color: white;
			font-weight: 600;
			padding-left: 16px;
			font-size: 16px;

			.days {
				position: relative;
				z-index: 100;
				padding: 2px 4px;
			}
		}

		button {
			background: none;
			border: none;
			cursor: pointer;
			font-size: 16px;
			color: white;
			font-weight: 600;
			color: white;
			font-weight: 600;
			font-family: $primaryFont !important;
			padding: 0;
		}

		.purchase {
			margin-left: 6px;
			text-decoration: underline;
			text-underline-offset: 3px;
			padding-bottom: 3px;
			margin-bottom: -3px;
		}

		.helpContainer {
			display: inline-block;
			position: relative;
			margin-left: auto;
			margin-right: 24px;
		}

		.help {
			position: relative;
			font-size: 14px;
			font-weight: 500;
			padding: 6px 12px;
			z-index: 100;
		}
	}

	.trial-ended {
		background: linear-gradient(139.13deg, #e32c66 1.57%, #cb1b53 100%);
		height: 76px;
		display: flex;
		align-items: center;

		.icon {
			margin-left: 24px;
			margin-right: 16px;
		}

		.text {
			color: white;
			font-size: 14px;
			font-weight: 400;
		}

		.contactSales {
			margin-left: auto;
			margin-right: 24px;
			padding: 6px 12px;

			font-weight: 500;
			font-size: 14px;
			color: #7083a0;

			cursor: pointer;

			background: #ffffff;
			border: 1px solid #d4d9e2;
			box-shadow: 0px 2px 10px rgba(16, 20, 24, 0.1);
			border-radius: 8px;
		}
	}
}

.toasts-wrapper {
	//position: absolute;
	position: relative;
	pointer-events: none;
	//top: 0;
	//bottom: 0;
	//right: 0;
	//left: 0;
	z-index: 9999999999999;
	.toasts {
		position: relative;

		.toast {
			//position: absolute;
		}
	}
}

::ng-deep #hubspot-messages-iframe-container {
	z-index: 1 !important;
	opacity: 0 !important;
	//right: -1000px !important;
}

//::ng-deep .Application__WidgetAppContainer-sc-1i6h88-0 {
//  opacity: 0 !important;
//}

.help-center-content-wrapper {
	height: 100vh;
	max-width: 60%;
	min-width: 300px;
	width: 0px;
	position: absolute;
	right: 0;
	transition: all 0.3s;
	overflow-y: hidden;

	.help-center-unsubscribe {
		position: absolute;
		top: 0;
		bottom: 0;
		right: 0;
		left: 0;
	}
	.drag-divider {
		position: absolute;
		left: 0;
		height: inherit;
		width: 8px;
		z-index: 1000;
		// background-color: $gray400;
		// border-left: 1px solid $gray400;
		// transition: width 0.2s linear;
		transition: box-shadow 0.3s ease-in-out;
		&:after {
			background-color: var(--drag-after-color, $gray400);
			bottom: 0;
			content: '';
			left: (--drag-after-left, 0px);
			position: absolute;
			top: 0;
			transition: $gray400 0.15s 0.15s, box-shadow 0.15s 0.15s;
			width: 1px;
			box-shadow: 0 0 0 var(--drag-after-shadow, 0px) $green500;
		}

		&:hover {
			cursor: col-resize;
			&:after {
				background-color: $green500;
				box-shadow: 0 0 0 1px $green500;
				left: 1px;
			}
		}
	}
	.close-icon {
		position: absolute;
		right: 0;
		cursor: pointer;
	}
	object,
	embed,
	iframe {
		width: 100%;
		height: calc(100vh - 70px);
	}

	.contact-wrapper {
		display: flex;
		align-items: center;
		justify-content: space-between;
		padding: 10px;
		border-top: 1px solid $gray400;
		.live-chat {
			padding: 0 12px;
			display: flex;
			transition: all 0.2s;
			cursor: pointer;
			&:hover {
				background: #f0f2f5;
				border-radius: 10px;
			}
			.live-chat-text {
				padding-left: 8px;
				color: $gray500;
				font-family: 'Inter';
				font-style: normal;
				font-weight: 500;
				font-size: 14px;
			}
		}
		.call-main {
			padding-right: 10px;
			cursor: pointer;
			.call-contant {
				position: relative;
				transition: all 0.2s;
				padding: 12px;
				height: 22px;
				&:hover {
					background: #f0f2f5;
					border-radius: 10px;
				}
				.pro-icon {
					position: absolute;
					width: 14px;
					right: 8px;
					top: 8px;
				}
				.call-icon {
					width: 22px;
				}
			}
		}
	}
}
#help-center-content::after {
	content: '';
	position: absolute;
	left: 0;
	width: 8px;
	height: 100%;
}

